# FAMES-R-Office-pro-Replit

./: .env.example  .gitignore  .replit  .replitignore  BROWSER_VERIFICATION.txt  BUILD_REPORT.txt  CHANGED_FILES.md  CORRECTION_REPORT.md  FINAL_ACCEPTANCE_REPORT.md  FINAL_DEFECT_LOG.md  FINAL_PACKAGE_REPORT.md  INSTALLATION_AND_LOCAL_START_REPORT.txt  INTEGRATION_AUDIT_REPORT.md  MASTER_PLAN_COMPLIANCE_REPORT.md  PACKAGE_CONTENT_SHA256.txt  PACKAGE_CONTENT_SHA256_REPLIT.txt  PACKAGE_VERIFICATION.txt  PHASE1_COMPLETION_REPORT.md  PHASE2A_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  PHASE5_COMPLETION_REPORT.md  PHASE6_COMPLETION_REPORT.md  README.md  REPLIT_DEPLOYMENT_GUIDE.md  REQUIRED_REPLIT_SECRETS.md  SOURCE_ZIP_SHA256.txt  TEST_AND_BUILD_REPORT.md  TEST_REPORT.txt  TYPECHECK_REPORT.txt  UAT_CHECKLIST.md  index.html  main.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  (+4 more)
backend/: .env.example  __init__.py  migrate.py
docs/: DEMO_VALIDATION_CHECKLIST.md  FILE_MANIFEST.txt  FILE_MANIFEST_V1_2.txt  FINAL_COMPLETION_SUMMARY.md  FINAL_CORRECTED_SRS.md  GITHUB_REPLIT_REPLACEMENT.md  INTEGRATION_REPORT.md  KNOWN_LIMITATIONS_V1_1.md  LOCAL_TEST_EVIDENCE.txt  SECURITY_REPORT_V1_1.md  TEST_REPORT_V1_1.md  UI_REPLACEMENT_V1_2.md  V1_AUDIT_EVIDENCE.txt  V1_INDEPENDENT_AUDIT.md
reports/: BROWSER_VERIFICATION.txt  BUILD_COMMAND_OUTPUT.txt  BUILD_REPORT.txt  INSTALLATION_AND_LOCAL_START_REPORT.txt  PACKAGE_VERIFICATION.txt  TEST_COMMAND_OUTPUT.txt  TEST_REPORT.txt  (+2 more)
(+212 files in other folders)
