[project]
name = "bybit-insw-bot"
version = "1.1.0"
description = "B Bot — Bybit Demo intraday swing trading application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "httpx>=0.27.0,<1.0",
    "pydantic-settings>=2.5.0,<3.0",
    "sqlalchemy>=2.0.35,<3.0",
    "psycopg2-binary>=2.9.9,<3.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "websockets>=13.0,<16.0",
    "pytest>=8.0,<9.0",
]
